# sample-framework

./: .editorconfig  .gitignore  Animation.cpp  Arrow.cpp  BSpline.cpp  BVH.cpp  BVH.h  BVHNode.h  BVHTree.hpp  Bone.cpp  Bone.h  BoneHeat.cpp  Bspline.h  CMakeLists.txt  Circle.h  Collison.h  ControlPoint.cpp  ControlPoint.h  DeltaMush.cpp  DeltaMush.h  Draw.cpp  HRBF.h  ImplicitSkinning.cpp  Inverse_Kinematics.cpp  Joint.cpp  Joint.h  Keyframe.h  KinectSkelton.cpp  KinectSkelton.h  MarchingCubes.cpp  MarchingCubes.h  Matrix4.h  Mesh.h  MyViewer.cpp  MyViewer.h  MyWindow.cpp  MyWindow.h  NarrowPhase.cpp  Open.cpp  Openfiler.hpp  (+12 more)
Bones/: KAman.bone  Man.bone  arm.bone  arm2.bone  csuklo.bone  face.bone  inverzarm.bone  knight.bone  knightman.bone  mybonearm.bone  sol.bone  t.bone  thaman.bone  thanosman.bone  tpose.bone
Models/: Cub2.2.mtl
ccd_internal/: CTCD.cpp  Distance.hpp  Projection.hpp  rpoly.h
src/: AABB.h  Animation.cpp  Arrow.cpp  BVH.cpp  BVH.h  BVHNode.h  BaseMesh.cpp  BaseMesh.h  Blendshape.cpp  Blendshape.h  Bone.cpp  Bone.h  BoneHeat.cpp  BoneHeat.h  Collison.cpp  Collison.h  ControlPoint.cpp  ControlPoint.h  DeltaMush.cpp  DeltaMush.h  Draw.cpp  HRBF.h  ImplicitSkinning.cpp  ImplicitSkinning.h  ImprovedDeltaMush.cpp  ImprovedDeltaMush.h  InverseKinematics.cpp  InverseKinematics.h  Inverse_Kinematics.cpp  Joint.cpp  Joint.h  Keyframe.h  KinectSkelton.cpp  KinectSkelton.h  Lines.cpp  Lines.h  MarchingCubes.h  Matrix4.h  Mesh.h  MyQuaternion.hpp  (+20 more)
src/mclccd/: BVHLeaf.cpp  BVHLeaf.hpp  BVHTree.cpp  NarrowPhase.hpp
src/skeleton/: Bone.cpp  Bone.h  Joint.cpp  Joint.h  (+2 more)
(+23 files in other folders)
